.metadata/.plugins/org.eclipse.cdt.ui/loop.build.log
08:09:33 **** Rebuild of configuration Debug for project loop ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\loop.o" "..\\src\\loop.c" 
..\src\loop.c: In function 'main':
..\src\loop.c:15:8: error: 'sum' undeclared (first use in this function)
  int i;sum=0;
        ^~~
..\src\loop.c:15:8: note: each undeclared identifier is reported only once for each function it appears in

08:09:33 Build Failed. 1 errors, 0 warnings. (took 205ms)

